documentation API for auth Done
